--- a/iOS/MobileTest.iOS.csproj
+++ b/iOS/MobileTest.iOS.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>MobileTest.iOS</RootNamespace>
     <AssemblyName>MobileTest.iOS</AssemblyName>
     <IPhoneResourcePrefix>Resources</IPhoneResourcePrefix>
+    <ReleaseVersion>0.2</ReleaseVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|iPhoneSimulator' ">
     <DebugSymbols>true</DebugSymbols>
